bitfields/tests/compile_error_cases/errors/bitfield_invalid_bitfield_copy_value.rs
use bitfields::bitfield;

#[bitfield(u32, copy = 123)]
pub struct Bitfield {
    #[bits(default = 0x12)]
    a: u32,
}

#[bitfield(u32, copy = invalid)]
pub struct Bitfield2 {
    #[bits(default = 0x12)]
    a: u32,
}

fn main() {}

